--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="products">
      <div class="products">
         <h1>electronics</h1>
-        <img src="ecomm image.jpg" alt="">
+        <img src="img/ecomm image.jpg" alt="">
         <p>price rs.3000</p>
         <button>add to cart</button>
 
@@ -33,7 +33,7 @@
      <div class="products">
 
         <h1>Shirt</h1>3
-        <img src="shirt1.webp" alt="">
+        <img src="img/shirt1.webp" alt="">
        
         <p>price rs.580</p>
         <button>add to cart</button>
@@ -43,7 +43,7 @@
        <div class="products">
     
          <h1>shoe</h1>
-         <img src="shoe.webp" alt="">        
+         <img src="img/shoe - Copy.webp" alt="">        
          <p>price rs.3400</p>
         <button>add to cart</button>
      </div>
@@ -51,7 +51,7 @@
     <div class="products">
 
          <h1>watch</h1>
-         <img src="watch.webp" alt="">
+         <img src="img/watch.webp" alt="">
          <p>price rs.900</p>
         <button>add to cart</button>
 
